--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,8 @@
     "com.unity.ads": "2.3.1",
     "com.unity.analytics": "3.2.2",
     "com.unity.collab-proxy": "1.2.15",
+    "com.unity.collections": "0.0.9-preview.12",
+    "com.unity.mathematics": "1.0.0-preview.1",
     "com.unity.package-manager-ui": "2.0.3",
     "com.unity.purchasing": "2.0.3",
     "com.unity.textmeshpro": "1.3.0",
